Homework6/MainService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework6mainservice
  labels:
    app: homework6mainservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework6mainservice
  template:
    metadata:
      labels:
        app: homework6mainservice
    spec:
      containers:
      - name: homework6mainservice
        image: flash1200/homework6_mainservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
